<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartHome</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="device_activity_titlename">我的设备</string>
    <string name="user_activity_titlename">个人中心</string>
    <string name="shop_activity_titlename">商城</string>
    <string name="news_activity_titlename">消息中心</string>
    
    
    <string name="box_add_wifiname">WIFI名称</string>
    <string name="box_add_wifipwd">WIFI密码</string>
    <string name="box_add_btn">激活</string>
    
    <string name="timeout">获取超时,请重试</string>
    
    
    
     <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="box_add_device_name">设备名称</string>
    <string name="box_add_device_uuid">设备序号</string>
    <string name="box_add_bind_btn">完成</string>

   
    <string name="main_switch">总开关</string>
    <string name="shunt_switch">分路器</string>
    
    
    <string name="register_sucess">注册成功</string>
    
    
    <string name="leakageProtection">漏电保护器</string>
    <string name="splitter">智能分路器</string>
    
    <!-- 开关设备的详细信息 -->
    <string name="voltage">电压</string>
    <string name="current">电流</string>
    <string name="totalElectricityQuantity">累计电量</string>
    <string name="capacity">功率</string>
    <string name="temperature">模块温度</string>
    <string name="powerFactor">功率因素</string>
    <string name="limitedPower">限定电量</string>
    <string name="limitingPower">限定功率</string>
    <string name="overpressureUpperLimit">过压上限</string>
    <string name="undervoltageLowerLimit">过压下限</string>
    <string name="currentCapacity">电流容量</string>
    <string name="overTempSetting">超温设定</string>
    <string name="operationEventCode">操作事件码</string>
    <string name="AlarmEventCode">报警事件码</string>
    <string name="equipmentFaultCode">设备故障码</string>
    <string name="alarmPushFlag">报警事件是否推送</string>
    <string name="operationPushFlag">操作事件是否推送</string>
    <string name="operationLock">控制锁</string>
    <string name="time_task_list_title">任务列表</string>


</resources>